--- a/.github/workflows/scheduler.yml
+++ b/.github/workflows/scheduler.yml
@@ -2,7 +2,7 @@ name: Kerala IT Park Job Scraper Automation
 
 on:
   schedule:
-    - cron: '0 4 * * *'
+    - cron: '0 4 * * *'   # Runs every day at 4 AM
   workflow_dispatch:
 
 jobs:
@@ -12,6 +12,8 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+        with:
+          token: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Set up Python
         uses: actions/setup-python@v4
@@ -32,3 +34,11 @@ jobs:
           STUDENT_NAMES: ${{ secrets.STUDENT_NAMES }}
           GOOGLE_API_KEY: ${{ secrets.GOOGLE_API_KEY }}
         run: python app.py
+
+      - name: Commit updated history file
+        run: |
+          git config --global user.name "github-actions"
+          git config --global user.email "github-actions@github.com"
+          git add previous_jobs.csv || echo "No history file to add"
+          git commit -m "Update previous job history" || echo "No changes to commit"
+          git push
